--- a/collective/alias/TODO.txt
+++ b/collective/alias/TODO.txt
@@ -32,16 +32,24 @@ Bugs/to test
   [x] Cataloging of alias
         - alias created/renamed/moved/deleted
 
-  [ ] Cataloging when target changed
+  [x] Cataloging when target changed
         - target created/renamed/moved/deleted/modified
   
-  [ ] Target moved
+  [x] Target moved
   
   [ ] Target copied
+        - alias should point to original
+        - IHasAlias should not be set
+    
+  [x] Target deleted
+        - all aliases should be removed as well
+        - causes error in z3c.relationfield!
   
   [ ] Alias moved
   
   [ ] Alias copied
+  
+  [x] Alias removed
   
   [ ] Name chooser uses same rules as target
         - e.g. file content should use filename, not title-to-id
@@ -49,12 +57,12 @@ Bugs/to test
 Integration
 -----------
 
- [ ] Add "paste as alias" action
-
  [ ] Allow different display templates
         - default to whatever the display template on the target was
         - allow override via 'display' menu
         - also allow setting default page (not defaulted)
+
+ [ ] Add "paste as alias" action
 
  [ ] Provide link to alias edit form
         - and not to target edit form
