Add initial "paste as alias" implementation.

--- a/src/collective/alias/TODO.txt
+++ b/src/collective/alias/TODO.txt
@@ -68,12 +68,18 @@ Bugs/to test
   
 Integration
 -----------
-
+ [ ] Add "paste as alias" action
+ 
+ [ ] Support automatically enabling "alias traversal" for certain types
+        - store settings in plone.registry
+        - for paste
+        - for new objects?
+ 
  [ ] Make alias more read-only
         - hide regular edit actions/show alias @@edit view (override viewlet)
         - disallow portlet management
 
- [ ] Add "paste as alias" action
+
 
  [ ] Ensure alias has distinct UID
         - to allow separate references to alias and target
