--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,8 @@ Changelog
 1.0-SNAPSHOT (unreleased)
 -------------------------
 
+* Grok 2.1 compatibility.
+
 * Fix "AttributeError: 'Plone' object has no attribute 'prepareObjectTabs'" in
   Plone 4, disabling content views altogether.
   (Most notably, disabling the option to edit an Alias).
