clear and rebuild zc.relation catalog

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,11 +4,8 @@ Changelog
 1.1 (unreleased)
 ----------------
 
-* The upgrade profile clears the relation catalog to fix issues with interfaces
-  that don't exist anymore.
-  /!\ If you have other dexterity content types with relations, you have to
-  write a script that notify an ObjectModifiedEvent for each instance to
-  reindex the relations.
+* The upgrade profile clear and rebuild the zc.relation catalog to fix issues
+  with interfaces that don't exist anymore.
   [vincentfretin]
 
 * Localized package + french translation.
