--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,8 @@ Changelog
 1.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Update dev to Plone 4.3 and make tests runnable.
+  [jaroel]
 
 
 1.3.1 (2014-02-26)
