--- a/src/collective/alias/locales/fr/LC_MESSAGES/collective.alias.po
+++ b/src/collective/alias/locales/fr/LC_MESSAGES/collective.alias.po
@@ -1,10 +1,10 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: aws.pdfbook\n"
+"Project-Id-Version: collective.alias\n"
 "POT-Creation-Date: 2014-07-30 02:51+0000\n"
 "PO-Revision-Date: 2010-05-11 15:30+0000\n"
-"Last-Translator: Gilles Lenfant <gilles.lenfant@alterway.fr>\n"
-"Language-Team: Alterway <support@alterway.fr>\n"
+"Last-Translator: Eric Bréhault <ebrehault@gmail.com>\n"
+"Language-Team: Makina Corpus <contact@makina-corpus.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -12,59 +12,59 @@ msgstr ""
 "Language-Code: fr\n"
 "Language-Name: Français\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: aws.pdfbook\n"
+"Domain: collective.alias\n"
 
 #: collective/alias/profiles/default/types/collective.alias.xml
 msgid "Alias"
-msgstr ""
+msgstr "Alias"
 
 #: collective/alias/interfaces.py:56
 msgid "Alias actions"
-msgstr ""
+msgstr "Actions sur les alias"
 
 #: collective/alias/interfaces.py:17
 msgid "Aliased object"
-msgstr ""
+msgstr "Contenu aliasé"
 
 #: collective/alias/interfaces.py:31
 msgid "Allow traversal"
-msgstr ""
+msgstr "Autoriser la navigation"
 
 #: collective/alias/profiles/default/types/collective.alias.xml
 msgid "An alias for another content item"
-msgstr ""
+msgstr "Un alias pour un autre contenu"
 
 #: collective/alias/interfaces.py:18
 msgid "Choose an object to alias"
-msgstr ""
+msgstr "Choisir un contenu à aliaser"
 
 #: collective/alias/profiles/default/actions.xml
 msgid "Create an alias of the data on the clipboard"
-msgstr ""
+msgstr "Créer un alias à partir des données copiées"
 
 #: collective/alias/browser.py:77
 msgid "Edit alias"
-msgstr ""
+msgstr "Modifier l'alias"
 
 #: collective/alias/interfaces.py:57
 msgid "Ids of actions that are allowed on aliases"
-msgstr ""
+msgstr "Identifiants des actions autorisées sur les alias"
 
 #: collective/alias/interfaces.py:32
 msgid "If selected, children of the aliased object will appear as children of the alias. Note that they will not be indexed in the catalog, and probably won't show up in folder listings. This option may be useful for e.g. Collections, where some information is stored in child objects."
-msgstr ""
+msgstr "Si activée, les contenus enfants du contenu aliasé apparaîtront en tant qu'enfants de l'alias. Note: ils ne seront pas indexés dans le catalogue, et n'apparaîtront pas dans la vue Contenus du dossier."
 
 #: collective/alias/interfaces.py:25
 msgid "If you want your alias to have a different title than the aliased object, enter a title here."
-msgstr ""
+msgstr "Si vous souhaitez que l'alias ait un titre différent de celui du contenu aliasé, saisissez-le ici."
 
 #: collective/alias/interfaces.py:49
 msgid "List of types which by default allow traversal"
-msgstr ""
+msgstr "Liste des types pour lesquels on autorise par défaut la navigation"
 
 #: collective/alias/profiles/default/actionicons.xml
 msgid "Paste alias"
-msgstr ""
+msgstr "Coller l'alias"
 
 #: collective/alias/profiles/default/actions.xml
 msgid "Paste as alias"
@@ -72,9 +72,9 @@ msgstr "Coller comme alias"
 
 #: collective/alias/interfaces.py:24
 msgid "Title override"
-msgstr ""
+msgstr "Remplacement du titre"
 
 #: collective/alias/interfaces.py:48
 msgid "Traversal types"
-msgstr ""
+msgstr "Types navigables"
 
